Use new Avinor API (#438)
* Use new Avinor API

* Refactor layover resolution

* Configure Sonar

* Code clean-up

* Update Java version in Docker file

* Code clean-up

* Set git fetch depth for Sonar analysis

* Add unit tests

* Add unit tests

* Code clean-up

* Add unit tests

* Code clean-up

* Add unit tests